# mupen64minus-ui-console

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
projects/cmake/: CMakeLists.txt
projects/unix/: Makefile
src/: core_interface.c  core_interface.h  debugger.c  debugger.h  main.c  main.h  osal_dynamiclib_win32.c  osal_preproc.h  plugin.c
